--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ insta = { version = "1.34.0" }
 bon = "3.8.1"
 tinyvec = { features = ["alloc", "serde"], version = "1.10.0" }
 rustyms = "0.8.3"
+csv = "1.3"
 
 [profile.release]
 lto = 'thin'
