--- a/rust/timsseek/Cargo.toml
+++ b/rust/timsseek/Cargo.toml
@@ -18,6 +18,7 @@ rand = "0.9.2"
 timsquery = { path = "../timsquery" }
 calibrt = { path = "../calibrt" }
 micromzpaf = { path = "../micromzpaf" }
+timscentroid = { path = "../timscentroid" }
 
 # Workspace-inherited deps
 rustyms = { workspace = true }
