--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ tinyvec = { features = ["alloc", "serde"], version = "1.10.0" }
 rustyms = "0.11.0"
 csv = "1.3"
 
+tempfile = "3.23.0"
+
 [profile.release]
 lto = 'thin'
 codegen-units = 1
