--- a/rust/timscentroid/Cargo.toml
+++ b/rust/timscentroid/Cargo.toml
@@ -22,16 +22,21 @@ chrono = { version = "0.4", features = ["serde"] }
 
 # Storage abstraction (always available)
 object_store = "0.12"
-tokio = { version = "1", features = ["rt"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 futures = "0.3"
 bytes = "1"
 url = "2"
 once_cell = "1"
+async-trait = "0.1"
+aws-config = { version = "1.0" , optional = true }
+aws-credential-types = { version = "1.0", optional = true }
 
 # Example dependencies
+[dev-dependencies]
 tracing-subscriber = { workspace = true, features = ["env-filter"], default-features = true}
-rand = "0.8"
+rand = "0.9.2"
 tempfile = "3"
+tokio = { version = "1", features = ["macros"] }
 
 # Not using it RN but looks like a super solid way to make
 # builder patterns
@@ -39,6 +44,6 @@ tempfile = "3"
 
 [features]
 default = []
-aws = ["object_store/aws"]
+aws = ["object_store/aws", "aws-config", "aws-credential-types"]
 gcp = ["object_store/gcp"]
 azure = ["object_store/azure"]
