feat: added support for parquet speclib

--- a/rust/timsquery/Cargo.toml
+++ b/rust/timsquery/Cargo.toml
@@ -24,6 +24,8 @@ rayon = { workspace = true }
 half = { workspace = true }
 bon = { workspace = true }
 csv = { workspace = true }
+parquet = { workspace = true }
+arrow = { workspace = true }
 
 
 [lib]
