--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: linux-x86_64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            artifact_name: linux-x86_64-musl
           - os: macos-latest # M-series
             target: aarch64-apple-darwin
             artifact_name: macos-arm64
@@ -46,6 +49,10 @@ jobs:
         with:
           target: ${{ matrix.target }}
           cache: true
+
+      - name: Install musl-tools
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        run: sudo apt-get update && sudo apt-get install -y musl-tools
 
       - name: Build Binaries
         shell: bash
